styleIndexPages Added fixed navbar to index pages Changed padding of content so that navbar does not overlap

--- a/public/styles/codeSnippets.css
+++ b/public/styles/codeSnippets.css
@@ -43,3 +43,7 @@ pre.prettyprint.linenums li {
 links a {
 	display: block;
 }
+
+.container-top {
+	padding-top: 120px;
+}
